# extrato-pdf-para-excel

./: .gitignore  01_VISAO_DO_PROJETO.md  02_ANALISE_TECNICA.md  03_ARQUITETURA_SISTEMA.md  04_ESTRUTURA_PROJETO.md  05_MODELO_DADOS.md  06_ROADMAP_IMPLEMENTACAO.md  07_PLANO_TESTES.md  08_DECISOES_ARQUITETURA.md  ABRIR_EXTRATO_PARSER.bat  README.md  pyproject.toml  run_app.pyw
DOCS/: 00_ESTADO_ATUAL.md  01_VISAO_DO_PROJETO.md  02_ANALISE_TECNICA.md  03_ARQUITETURA_SISTEMA.md  04_ESTRUTURA_PROJETO.md  05_MODELO_DADOS.md  06_ROADMAP_IMPLEMENTACAO.md  07_PLANO_TESTES.md  08_DECISOES_ARQUITETURA.md  09_GUIA_NOVO_LAYOUT.md  10_OPERACAO_E_DIAGNOSTICO.md  11_CHANGELOG.md  MASTER_PROJECT_PROTOCOL.md
src/extrato_parser/: __init__.py  app.py  exporter.py  extraction.py  models.py  normalization.py  parser.py  service.py
src/extrato_parser/application/ports/: __init__.py  statement_exporter.py  statement_interpreter.py  statement_reader.py
src/extrato_parser/application/use_cases/: __init__.py  convert_statement.py
src/extrato_parser/domain/: __init__.py
src/extrato_parser/domain/entities/: __init__.py  parse_result.py  physical_line.py  statement_entry.py  word.py
src/extrato_parser/infrastructure/: __init__.py
src/extrato_parser/infrastructure/excel/: __init__.py  openpyxl_statement_exporter.py
src/extrato_parser/layouts/: __init__.py  layout_detector.py  layout_registry.py  layout_statement_interpreter.py  statement_layout.py
tests/: test_caixa_parser.py  test_exporter.py  test_inter_parser.py  test_itau_parser.py  test_normalization.py  test_parser.py
(+15 files in other folders)
