[project]
name = "extrato-parser"
version = "0.1.0"
description = "Conversor local de extratos bancários em PDF para Excel"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11,<0.12",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
extrato-parser = "extrato_parser.app:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
